# DestinE_ESA_CityNexus

./: .gitignore  .gitlab-ci.yml  .immerseon-ci.yml  README.md  ovh-deployment-guide.md
.run/: backend_api.run.xml  citynexus-api_Dockerfile.run.xml  citynexus-frontend_Dockerfile.run.xml  mobility-model-api_Dockerfile.run.xml  mobility_model_api.run.xml
Documentation/: Solenix SLXENGDE-CITYNEXUS - D5.2 - Use Case Descriptor - 06.01.md  Solenix SLXENGDE-CITYNEXUS - D5.4 - User Validation Report - 01.01.md  Solenix SLXENGDE-CITYNEXUS - D5.5 - Use Case Promotion Package - 05.01.md  Solenix SLXENGDE-CITYNEXUS - D5.6 - Use Case Exploitation Roadmap - 01.01_web.md  Solenix SLXENGDE-CITYNEXUS - FR - Final Report - 01.01.md  Solenix SLXENGDE-CITYNEXUS - SUM - Service User Manual - 02.00.md
api/citynexus-api/: Dockerfile  README.md  pyproject.toml
api/citynexus-api/citynexus_api/: config.toml.template
api/mobility-model-api/: Dockerfile  README.md  pyproject.toml
api/mobility-model-api/mobility_model_api/api/: app.py
api/mobility-model-api/mobility_model_api/api/v1/: analysis.py
api/mobility-model-api/mobility_model_api/model/: mobility_model_input.py
api/mobility-model-api/mobility_model_api/simulation/: model_input.py  model_output.py  model_run.py
api/mobility-model-api/mobility_model_api/util/: exception_helper.py
api/mobility-model-api/tests/: fixtures.py  test_xai_model_output.py
charts/: Chart.yaml  README.md  citynexus.conf  immerseon.conf  values.yaml
charts/templates/: _helpers.tpl  citynexus-api-deployment.yaml  flood-model-api-deployment.yaml  frontend-deployment.yaml  keycloak-deployment.yaml  mobility-model-api-aar-deployment.yaml  mobility-model-api-aar-pv.yaml  mobility-model-api-aar-pvc.yaml  mobility-model-api-cph-deployment.yaml  mobility-model-api-cph-pv.yaml  mobility-model-api-cph-pvc.yaml  mobility-model-api-svq-deployment.yaml  mobility-model-api-svq-pv.yaml  mobility-model-api-svq-pvc.yaml
data-handling/: .gitignore  README.md  pyproject.toml
data-handling/data_handling/: config.py  config.toml.template  main.py
datasets/: roads-destructured.md
datasets/population/: config.json
deployment/citynexus-api/: Chart.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
deployment/mobility-model-api-aar/: Chart.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
deployment/mobility-model-api-blq/: Chart.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
deployment/mobility-model-api-cph/: Chart.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
deployment/mobility-model-api-svq/: Chart.yaml  fleet.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
deployment/visualization/: Chart.yaml  values.desp-dev.yaml  values.desp-ivv.yaml  values.desp-prod.yaml  values.yaml
doc/: .gitlab-ci.yml  README.md
doc/api/: index.html  service-api.css  service-api.json
doc/source/: conf.py  conf_original.py  index.rst
images/citynexus-api/: Dockerfile  README.md  pyproject.toml
images/citynexus-api/citynexus_api/: config.toml.template
images/citynexus-api/citynexus_api/api/: app.py
images/citynexus-api/citynexus_api/api/v1/: predictions.py  scenarios.py
images/citynexus-api/citynexus_api/middleware/: guest.py  keycloak.py  logging.py  user_request_mapping.py
images/citynexus-api/citynexus_api/model/: create_prediction_input.py  create_scenario_input.py  generic.py  map_name.py  map_type.py  project_name.py  user.py
images/citynexus-api/citynexus_api/util/: backend_service.py  data_accessor.py  logging.py
images/citynexus-api/tests/: conftest.py  test_predictions.py  test_scenarios.py
images/flood-model-api/: Dockerfile  README.md  pyproject.toml
images/flood-model-api/flood_model_api/api/: app.py
images/flood-model-api/flood_model_api/api/v1/: simulation.py
images/flood-model-api/flood_model_api/model/: flood_model_input.py  generic.py
images/flood-model-api/flood_model_api/simulation/: model_output.py  model_run.py
images/flood-model-api/flood_model_api/util/: exceptions.py
images/keycloak/: README.md  pyproject.toml
images/keycloak/docker/: .gitignore  Dockerfile  README.md  docker-compose.yml  realm-export.json
images/keycloak/src/: main.py
images/mobility-model-api/: Dockerfile  README.md  model_input.json  pyproject.toml
images/mobility-model-api/mobility_model_api/: config.toml  config.toml.template
images/mobility-model-api/mobility_model_api/api/: app.py
images/mobility-model-api/mobility_model_api/api/v1/: analysis.py  model_info.py
images/mobility-model-api/mobility_model_api/model/: generic.py  mobility_model_input.py
images/mobility-model-api/mobility_model_api/simulation/: model_input.py  model_output.py  model_run.py  xai_blackbox.py  xai_record.py
images/mobility-model-api/mobility_model_api/util/: exception_helper.py  exceptions.py
images/mobility-model-api/tests/: test_model_info.py  test_xai_blackbox.py  test_xai_model_input.py
images/visualization/: .env_vars.dev  .env_vars.example  Dockerfile  README.md  index-immerseon.html  index.html  ovh-cors-configuration.json  package.json  webpack.config.js
images/visualization/src/: app.js  (+2 more)
immerseon-xai/: .gitignore  README.md  pyproject.toml
immerseon-xai/immerseon_xai/: main.py  util.py  xai_flood.py  xai_flood_impact.py  xai_impact_diff.py
keycloak/: pyproject.toml
keycloak/docker/: Dockerfile  realm-export.json
keycloak/src/: main.py
kpi/: requirements.txt  utils.py
kpi/citynexus/: conf.json  kpi_suite_citynexus.py
model/: README.md
test/demonstrator/: DefaultScenario.json  TestScenario_TC1.json  TestScenario_TC3.json  TestScenario_TC4.json
visualization/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  babel.config.js  index.html  package.json  webpack.config.js
visualization/.run/: backend-api.run.xml  flood-model-api.run.xml  keycloak.run.xml
visualization/src/: actions.js  app.js  hooks.ts  keycloak.js  main.js  store.tsx
(+199 files in other folders)
